syntax = "proto3";

package haven;

message Empty {}

enum RequestStatus {
	OK = 0;
	BAD_REQUEST = 1;
	INTERNAL_ERROR = 2;
}

message StatusResponse {
	RequestStatus status = 1;
	string message = 2;
}

service Haven {
	// Generate text from a prompt.
	rpc Generate(GenerateRequest) returns (stream GenerateResponse) {}

	// Get the list of models and their descriptions.
	rpc ListModels(Empty) returns (ListModelsResponse) {}

	// Worker management.
	rpc CreateWorker(ModelName) returns (StatusResponse) {}
	rpc PauseWorker(ModelName) returns (StatusResponse) {}
	rpc ResumeWorker(ModelName) returns (StatusResponse) {}
	rpc DeleteWorker(ModelName) returns (StatusResponse) {}
}

message GenerateRequest {
	string model = 1;
	string prompt = 2;
}

message GenerateResponse {
	string text = 1;
}

enum Status {
	RUNNING = 0;
	STOPPED = 1; // Worker doesn't exist.
	STARTING = 2;
	STOPPING = 3; // When going to STOPPED or PAUSED.
	PAUSED = 4;
	ERROR = 5;
}

message Model {
	string name = 1;
	Status status = 2;	
}

message ListModelsResponse {
	repeated Model models = 1;
}

message ModelName {
	string name = 1;
}